--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,6 @@
 PORT=3001
+MYSQL_DB_HOST=localhost
+MYSQL_DB_USERNAME=arianangoma
+MYSQL_DB_PASSWORD=arianangoma123123
+MYSQL_DB_PORT=3306
+MYSQL_DB_NAME=chat_app
