Setup strategies Access & Refresh

--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,11 @@ MYSQL_DB_USERNAME=arianangoma
 MYSQL_DB_PASSWORD=arianangoma123123
 MYSQL_DB_PORT=3306
 MYSQL_DB_NAME=chat_app
+
+JWT_SECRET=arianangoma123123
+JWT_EXPIRES_IN=1d
+
+JWT_REFRESH_SECRET=arianangoma123123
+JWT_REFRESH_EXPIRES_IN=7d
+
+MAX_USER_ACTIVITY_DAYS=60
